syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.witer";
option java_outer_classname = "Fretes";
option objc_class_prefix = "HLW";

package br.com.zupacademy.witer;

service FretesService {
  rpc send (FretesRequest) returns (FretesReply) {}

  rpc calculaFrete (CalculaFreteRequest) returns (CalculaFretesRequest){}
}

message FretesRequest {
  string name = 1;
}

message FretesReply {
  string message = 1;
}

message CalculaFreteRequest{
  string cep = 1;
}

message CalculaFretesRequest{
  double valor = 1;
  string cep = 2;
}

message ErrorDetails{
  int32 code = 1;
  string message = 2;
}